--- a/src/Pages/CSS/Homepage.css
+++ b/src/Pages/CSS/Homepage.css
@@ -4,7 +4,7 @@
 .home-screen{
     background: #fff;
     width: 100%;
-    height: 50vh;
+    height: 70vh;
 }
 
 .home-screen .page-content{
@@ -36,4 +36,32 @@
     color: #007d;
     text-transform: uppercase;
     margin-bottom: 12px;
+}
+
+.home-screen .page-content .user-card .user-meta p{
+    margin-bottom: 1px;
+}
+
+.home-screen .page-content .user-card .user-meta p span:first-child{
+    display: inline-block;
+    margin: 10px;
+    color: #6e6e6e;
+    font-size: 15px;
+}
+
+.home-screen .page-content .user-card .user-meta p span:last-child{
+    font-size: 16px;
+    color: #333;
+    font-weight: bold;
+}
+
+.home-screen header{
+    display: flex;
+    justify-content: space-between;
+    /* padding: 50px; */margin: 50px;
+    /* box-shadow: 0px 0px 1px 3px #573b3b; */
+}
+
+.home-screen header a{
+    text-decoration: none;
 }
